# chick_agent

./: .gitignore  pyproject.toml
examples/: chat.py  git_diff_agent.py
src/chick_agent/agent/: __init__.py  basic_agent.py  simple_agent.py
src/chick_agent/core/: agent.py  config.py  llm.py
src/chick_agent/protocols/mcp/: __init__.py  client.py
src/chick_agent/tools/: __init__.py  mcp_tool.py  registry.py  tool.py
