[project]
name = "chick-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "muluking", email = "muluking@eastwood.org" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.3",
    "httpx>=0.28.1",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
]

[project.scripts]
chick-agent = "chick_agent:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
